@@ -3,6 +3,7 @@
 Feeds 6.x 1.0 XXXXXXX, 20XX-XX-XX
 ---------------------------------
 
+- alex_b: Add mapping API for FeedsDataProcessor.
 - alex_b: Decode HTML entities for title and author name in
   FeedsSimplePieParser.
 - #623448 David Goode, alex_b, et al.: Date mapper.
